<resources>
    <string name="app_name">NEEDS SUPERMARKET DELIVERY</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">TASK</string>
    <string name="title_sites">SITES</string>
    <string name="title_siteshot">SITESHOT</string>
    <string name="title_notifications">ACCOUNT</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_test">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="stringEditTextHeadingFullName">Full Name</string>
    <string name="stringEditTextDescriptionFullName">Enter your Full Name</string>
    <string name="stringEditTextHeadingPhoneNumber">Phone Number</string>
    <string name="stringEditTextDescriptionPhoneNumber">Active contact number</string>
    <string name="stringEditTextHeadingPassword">Password</string>
    <string name="stringEditTextDescriptionPassword">Minimum 8 digit required</string>
    <string name="stringEditTextHeadingAddressFirst">Address Line First</string>
    <string name="stringEditTextHeadingAddressSecond">Address Line Second</string>
    <string name="stringEditTextDescriptionAddress">Current residential address</string>
    <string name="stringEditTextHeadingCityTown">City</string>
    <string name="stringEditTextDescriptionCityTown">Current City / Town / Village</string>
    <string name="stringEditTextHeadingState">State</string>
    <string name="stringEditTextDescriptionState">Current State</string>
    <string name="stringEditTextHintPhoto">Photo</string>
    <string name="stringEditTextHintDrivingLicense">Driving License</string>
    <string name="stringEditTextHeadingCode">Password</string>
    <string name="stringEditTextDescriptionCode">Enter Password</string>
    <string name="stringEditTextDescriptionNewCode">Enter New Password</string>
    <string name="stringEditTextHeadingPinCode">Pin Code</string>
    <string name="stringEditTextDescriptionPinCode">Enter Pin Code</string>
    <string name="stringEditTextHeadingPhoto">Photo</string>
    <string name="stringEditTextDescriptionPhoto">Uploaded Latest Image</string>
    <string name="stringEditTextHeadingDrivingLicense">Driving License</string>
    <string name="stringEditTextDescriptionDrivingLicense">Upload Driving License</string>
    <string name="stringTextViewTagPersonalDetails">Personal Details</string>
    <string name="stringTextViewTagAddressDetails">Address Details</string>
    <string name="stringEditTextDescriptionDrivingLice">Upload Driving License</string>
    <string name="stringTextViewLogin">Already have an account?</string>
    <string name="buttonSubmit">Submit</string>
    <string name="errorMessageName">Full Name is Required.</string>
    <string name="errorMessagePhone">Enter Valid Phone Number.</string>
    <string name="errorMessageUsername">Enter Valid Username.</string>
    <string name="errorMessageSafeCode">Enter Valid Password.</string>
    <string name="errorMessageAddressLineOne">Enter Valid Address.</string>
    <string name="errorMessageAddressLineTwo">Enter Valid Address.</string>
    <string name="errorMessageCity">Enter Valid City Name.</string>
    <string name="errorMessageState">Enter Valid State.</string>
    <string name="errorMessagePinCode">Enter Valid Pin Code.</string>
    <string name="stringActivityLoginHeading">Login</string>
    <string name="stringActivityLoginSubHeading">Login with registered username</string>
    <string name="stringEditTextLoginPhoneNumber">Registered username</string>
    <string name="buttonLoginSubmit">Login</string>
    <string name="stringActivityForgotPasswordHeading">Forgot Password</string>
    <string name="stringActivityForgotPasswordSubHeading">Update with registered phone number</string>
    <string name="stringEditTextForgotPasswordPhoneNumber">Registered contact number</string>
    <string name="buttonVerifySubmit">Verify</string>
    <string name="stringForgotPasswordHeading">Password Updated</string>
    <string name="stringForgotPasswordMessage">Password is updated successfully. Now you can access your account with new password</string>
    <string name="stringActivityDocUploadHeading">Upload Document</string>
    <string name="stringActivityDocUploadSubHeading">Upload latest document</string>
    <string name="stringSiteShotHeading">Media Site Location</string>
    <string name="stringNearBySiteShot">SiteShot Request</string>
    <string name="stringTakePicture">Take SiteShot</string>
    <string name="stringAcceptTask">Accept</string>
    <string name="stringRejectTask">Reject</string>
    <string name="stringFrameWarning">Take picture inside the frame</string>
    <string name="stringTrackLocation">Tracking</string>
    <string name="stringTakeSiteShot">Capture</string>
    <string name="stringSubmitQuery">Submit Query</string>
    <string name="stringOneTimePasswordShotHeading">Verification</string>
    <string name="stringActivityOneTimePasswordSubHeading">We have sent you an access code
via SMS for Mobile number Verification</string>
    <string name="stringEnterYourCode">Enter One Time Password</string>
    <string name="stringOneTimePassword">OTP</string>
    <string name="stringResendOtp">Resend Otp</string>
    <string name="stringAccountVerifiedHeading">Account Confirmed</string>
    <string name="stringAccountVerifiedDetails">Welcome to SuperCook app. your account is created successfully. Our team will review your account and verify within 24 hour</string>
    <string name="stringNoSiteAvailable">No sites available to take siteshot. You can change the location to find nearby siteshot</string>
    <string name="unknown_location">Unknown Location</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="stringEditTextAddSiteName">Name</string>
    <string name="stringEditTextAddSiteNameInput">Enter Site Name</string>
    <string name="stringEditTextSiteLocation">Location</string>
    <string name="stringEditTextSiteLocationHint">Loading Location</string>
    <string name="stringEditTextSiteImages">Images</string>
    <string name="stringEditTextSiteImagesSubHeading">Upload clear picture blurred image is not acceptable</string>
    <string name="title_activity_update_location">UpdateLocation</string>
    <string name="stringEditTextAddSiteDisplayType">Display Type</string>
    <string name="stringEditTextAddSiteDisplayTypeInput">Select Display Type</string>
</resources>