<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.deliverykreani.activity.authentication.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <!-- LoginActivity progress -->
            <LinearLayout
                android:id="@+id/text_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/stringActivityForgotPasswordHeading"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="36dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="Update with registered username"
                    android:textColor="@color/textColorSecondry"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/text_holder"
                android:layout_marginTop="92dp"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/edit_text_line"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="username"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="@dimen/edit_text_heading_size"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/reg_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:background="@color/colorTransparent"
                            android:hint="@string/stringEditTextLoginPhoneNumber"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textSize="@dimen/edit_text_hint_size" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/button_blue_hollow"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <Button
                            android:id="@+id/verify_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTransparent"
                            android:text="@string/buttonVerifySubmit"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="4.5"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/login_progress_verify"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@drawable/button_blue"
                            android:gravity="center"
                            android:padding="12dp"
                            android:visibility="gone">

                            <ProgressBar
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/arrow_verify"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@drawable/button_blue"
                            android:padding="8dp"
                            android:rotation="180"
                            android:src="@drawable/ic_keyboard_backspace_black_24dp"
                            android:tint="@color/white"
                            android:translationZ="4dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/back_to_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="56dp"
                        android:layout_marginRight="6dp"
                        android:elevation="6dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:background="@drawable/button_blue"
                                android:padding="6dp"
                                android:src="@drawable/ic_left_arrow"
                                android:tint="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:gravity="top"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Login"
                                android:textAllCaps="true"
                                android:textColor="@color/textColorSecondry"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/forgot_password_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/email_login_form"
                android:layout_marginTop="42dp"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/edit_text_line"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stringOneTimePassword"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="@dimen/edit_text_heading_size"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/reg_one_time_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:background="@color/colorTransparent"
                            android:hint="@string/stringEnterYourCode"
                            android:inputType="number"
                            android:maxLines="1"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textSize="@dimen/edit_text_hint_size" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/edit_text_line"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/stringEditTextHeadingCode"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="@dimen/edit_text_heading_size"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/reg_safe_code_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:background="@color/colorTransparent"
                            android:hint="@string/stringEditTextDescriptionNewCode"
                            android:inputType="numberPassword"
                            android:maxLines="1"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textSize="@dimen/edit_text_hint_size" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/button_blue"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <Button
                            android:id="@+id/update_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTransparent"
                            android:text="Update"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="4.5"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/update_progress"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@drawable/button_white"
                            android:gravity="center"
                            android:padding="12dp"
                            android:visibility="gone">

                            <ProgressBar
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/arrow"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@drawable/button_white"
                            android:padding="8dp"
                            android:rotation="180"
                            android:src="@drawable/ic_keyboard_backspace_black_24dp"
                            android:tint="@color/colorAccent"
                            android:translationZ="4dp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>